--- a/cft/cost.yml
+++ b/cft/cost.yml
@@ -1,3 +1,5 @@
+- name: AWS CloudFormation "Deploy CloudFormation Stack" Action for GitHub Actions
+  uses: aws-actions/aws-cloudformation-github-deploy@v1.0.3
 AWSTemplateFormatVersion: 2010-09-09
 Resources:
   LambdaFunction:
